--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-bouncy-checkbox": "^4.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-file-system": "~16.0.8",
+    "expo-asset": "~9.0.2",
+    "expo-sqlite": "~13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
