--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,6 +18,8 @@
     "@supabase/supabase-js": "^2.42.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~50.0.13",
+    "expo-dev-client": "~3.3.11",
+    "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -25,9 +27,11 @@
     "react-native": "0.73.5",
     "react-native-bouncy-checkbox": "^4.0.0",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6",
-    "expo-file-system": "~16.0.9"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
