--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-bouncy-checkbox": "^4.0.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6"
   },
