--- a/app.json
+++ b/app.json
@@ -1,30 +1,33 @@
 {
-  "expo": {
-    "name": "MyOffice",
-    "slug": "MyOffice",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/snack-icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/snack-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+    "expo": {
+        "name": "MyOffice",
+        "slug": "MyOffice",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/snack-icon.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/snack-icon.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/snack-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "com.m_farras.MyOffice"
+        },
+        "web": {},
+        "extra": {
+            "eas": {
+                "projectId": "595f0045-2fab-43a8-8749-50429e363db5"
+            }
+        }
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/snack-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {},
-    "sdkVersion": "50.0.0"
-  },
-  "name": "myoffice"
+    "name": "myoffice"
 }
