--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.42.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~50.0.17",
-    "expo-dev-client": "~3.3.11",
-    "expo-file-system": "~16.0.9",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.14",
+    "expo-dev-client": "~4.0.18",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-bouncy-checkbox": "^4.0.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6"
   },
